--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,14 @@ a {
 }
 
 .button{
+  display: block;
+
   font-size: 16px;
   font-weight: 600;
   line-height: 21px;
+  text-align: center;
 
-  padding: 17px 26px;
+  padding: 17px 25px;
 
   border-radius: 3px;
 
