--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,27 @@ a {
 
 .button:hover,
 .button:focus{
-
+  box-shadow: 0px 0px 0px 2px rgba(58, 149, 255, 1);
+}
+.button:active{
+  box-shadow: inset 0px 0px 0px 2px rgba(58, 149, 255, 1);
 }
 
 .button--get{
   background-color: #3A95FF;
   color: #ffffff;
 }
-
+.button--get:hover,
+.button--get:focus{
+  background-color: #0178ff;
+  box-shadow: 0px 0px 0px 2px rgba(1, 120, 255, 1);
+  padding: 18px 26px;
+  border: none;
+}
+.button--get:active{
+  background-color: #0261ce;
+  box-shadow: 0px 0px 0px 2px rgba(2, 97, 206, 1);
+}
 
 
 
