--- a/css/footer.css
+++ b/css/footer.css
@@ -13,11 +13,11 @@
 }
 
 
-.main-footer__wrap--one{
+.main-footer__wrap--first-coloumn{
   width: 355px;
   margin-right: 35px;
 }
-.main-footer__wrap--two{
+.main-footer__wrap--second-coloumn{
   width: 250px;
 }
 
