--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 body {
   margin: 0;
 
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   line-height: 30px;
   font-weight: 500;
@@ -45,51 +45,46 @@ a {
   display: none;
 }
 
-.button{
+.button {
   display: block;
+  width: 200px;
+  padding: 17px 25px;
 
   font-size: 16px;
   font-weight: 600;
   line-height: 21px;
+  color: #3a95ff;
   text-align: center;
 
-  padding: 17px 25px;
-
   border-radius: 3px;
-
-  border: 1px solid #3A95FF;
-
-  width: 200px;
+  border: 1px solid #3a95ff;
 
   background-color: transparent;
-  color: #3A95FF;
 
   cursor: pointer;
 }
 
 .button:hover,
-.button:focus{
+.button:focus {
   box-shadow: 0px 0px 0px 2px rgba(58, 149, 255, 1);
 }
-.button:active{
+.button:active {
   box-shadow: inset 0px 0px 0px 2px rgba(58, 149, 255, 1);
 }
 
-.button--get{
-  background-color: rgba(58, 149, 255, 1);
+.button--get {
   color: #ffffff;
+  background-color: rgba(58, 149, 255, 1);
 }
 .button--get:hover,
-.button--get:focus{
-  background-color: rgb(46, 137, 241);
-  box-shadow: 0px 0px 0px 2px rgb(46, 137, 241);
+.button--get:focus {
   padding: 18px 26px;
   border: none;
+
+  background-color: rgb(46, 137, 241);
+  box-shadow: 0px 0px 0px 2px rgb(46, 137, 241);
 }
-.button--get:active{
+.button--get:active {
   background-color: rgb(37, 124, 224);
   box-shadow: 0px 0px 0px 2px rgb(37, 124, 224);
 }
-
-
-
