--- a/css/debet-cards.css
+++ b/css/debet-cards.css
@@ -6,12 +6,10 @@
   margin: 0;
   margin-bottom: 70px;
 
+  color: rgb(0, 0, 0);
   font-size: 40px;
-
   font-weight: 600;
   line-height: 49px;
-
-  color: #000000;
 }
 
 .debet-cards__list {
@@ -24,10 +22,9 @@
   margin-bottom: 70px;
   padding: 50px 120px;
 
-  background-color: #eff2f5;
+  background-color: rgb(239, 242, 245);
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
-
 
   background-repeat: no-repeat;
   background-position: left;
@@ -46,10 +43,10 @@
   margin: 0;
   margin-bottom: 45px;
 
+  color: #212121;
   font-size: 32px;
   font-weight: 600;
   line-height: 42px;
-  color: #212121;
 }
 
 .debet-cards__features-list {
@@ -59,14 +56,12 @@
   list-style: none;
 
   font-size: 20px;
-
   font-weight: 400;
   line-height: 40px;
 }
 
 .debet-cards__features-item{
   height: auto;
-
 }
 
 .debet-cards__item--ruble{
