--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,12 @@
 .main-footer{
-  background-color: #EFF2F5;
   padding: 35px 0;
-  color: #424242;
-
+  
+  color: rgb(66, 66, 66);
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
+
+  background-color: rgb(239, 242, 245);
 }
 
 .main-footer .container{
@@ -24,19 +25,23 @@
 
 .main-footer__copyright{
   margin: 0;
-  font-weight: 600;
-
   margin-bottom: 22px;
+
+  font-weight: 600;
 }
+
+
+
 
 .main-footer__feedback-link{
   display: block;
   width: max-content;
   margin-bottom: 22px;
 
+  color: rgb(66, 66, 66);
   font-weight: 600;
+  
   text-decoration-line: underline;
-  color: #424242;
 }
 .main-footer__feedback-link:focus,
 .main-footer__feedback-link:hover{
@@ -64,7 +69,7 @@
 }
 
 .main-footer__item a{
-  color: #424242;
+  color: rgb(66, 66, 66);
 }
 .main-footer__item a:hover,
 .main-footer__item a:focus{
