--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   font-size: 15px;
   line-height: 30px;
   font-weight: 500;
-  color: #595959;
+  color: rgb(89, 89, 89);
 }
 
 a {
@@ -50,14 +50,14 @@ a {
   width: 200px;
   padding: 17px 25px;
 
+  color: rgb(58, 149, 255);
   font-size: 16px;
   font-weight: 600;
   line-height: 21px;
-  color: #3a95ff;
   text-align: center;
 
   border-radius: 3px;
-  border: 1px solid #3a95ff;
+  border: 1px solid rgb(58, 149, 255);
 
   background-color: transparent;
 
