--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@
 }
 
 .get-credit__headline span {
-  color: rgb(58, 149, 255);
+  color: var(--blue-color);
 }
 
 .offer-buttons {
@@ -219,7 +219,7 @@
   font-weight: 500;
   line-height: 39px;
 
-  border-bottom: 1px solid rgb(58, 149, 255);
+  border-bottom: 1px solid var(--blue-color);
 }
 
 .card-terms__term-name {
@@ -241,7 +241,7 @@
   background-color: rgb(247, 247, 247);
   box-shadow: -5px -5px 25px rgba(255, 255, 255, 0.25), 5px 5px 25px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  border-bottom: 5px solid rgb(58, 149, 255);
+  border-bottom: 5px solid var(--blue-color);
 
   padding: 34px 34px 29px 34px;
 
