--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: inherit;
 }
 
+:root {
+  --blue-color: rgba(58, 149, 255, 1);
+}
+
 html {
   box-sizing: border-box;
 }
@@ -66,15 +70,15 @@ a {
 
 .button:hover,
 .button:focus {
-  box-shadow: 0px 0px 0px 2px rgba(58, 149, 255, 1);
+  box-shadow: 0px 0px 0px 2px var(--blue-color);
 }
 .button:active {
-  box-shadow: inset 0px 0px 0px 2px rgba(58, 149, 255, 1);
+  box-shadow: inset 0px 0px 0px 2px var(--blue-color);
 }
 
 .button--get {
   color: #ffffff;
-  background-color: rgba(58, 149, 255, 1);
+  background-color: var(--blue-color);
 }
 .button--get:hover,
 .button--get:focus {
